# talent-plan

courses/rust/projects/project-1-done/: Cargo.toml
courses/rust/projects/project-1-done/src/: kv.rs
courses/rust/projects/project-1-done/tests/: tests.rs
courses/rust/projects/project-2-done/: Cargo.toml
courses/rust/projects/project-2-done/src/: errors.rs  kv.rs  lib.rs
courses/rust/projects/project-2-done/tests/: tests.rs
courses/rust/projects/project-3-done/: .gitignore  Cargo.toml
courses/rust/projects/project-3-done/benches/: read.rs  write.rs
courses/rust/projects/project-3-done/src/: errors.rs  lib.rs  store.rs
courses/rust/projects/project-3-done/src/engines/: kvs.rs  mod.rs  sled.rs
