[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "^4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "^2"
predicates = "^3"

[lib]
test = false
path = "src/lib.rs"

[[bin]]
name = "kvs"
test = false
