[package]
name = "kvs"
version = "0.1.0"
authors = ["Vincent Serpoul <vincent@serpoul.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "^2"
predicates = "^3"

[lib]
test = false
path = "src/lib.rs"

[[bin]]
name = "kvs"
test = false
