[package]
name = "kvs"
version = "0.1.0"
authors = ["Vincent Serpoul <vincent@serpoul.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }
thiserror = "^1"
tempfile = "^3"
walkdir = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
assert_cmd = "^2"
predicates = "^3"

[lib]
test = false
path = "src/lib.rs"

[[bin]]
name = "kvs"
test = false
