[package]
name = "kvs"
version = "0.1.0"
authors = ["Vincent Serpoul <vincent@serpoul.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }
thiserror = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
env_logger = "0.10"
log = "^0.4"
sled = "0.34.7"
signal-hook = "0.3.15"

[dev-dependencies]
assert_cmd = "^2"
predicates = "^3"
rand = "^0.8"
criterion = "^0.5"
tempfile = "^3"
walkdir = "^2"


[lib]
test = false
path = "src/lib.rs"

[[bin]]
name = "kvs-client"
test = false

[[bin]]
name = "kvs-server"
test = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "read"
harness = false
